# KitNEngine

./: .gitignore  CMakeLists.txt  README.txt  vcpkg.json  vcpkg.json.old
Assets/Models/: Cube.fbx  cube2.fbx  masterchiefSmol.fbx
Assets/Shaders/: MyFragmentShader.glsl  MyVertexShader.glsl  vertex.glsl
include/: IgInterface.h
include/Common/Core/: App.h
include/Common/Importers/: MeshImporter.h
include/Common/Modules/: ResourceManager.h  Resources.h
include/Common/Resources/: KMesh.h  Resource.h
include/Component/: AAPP.h  Camera.h  Component.h  Formas Primitivas.h  GameObject.h  Transform.h
include/Config/: Config.h
include/Core/: App.h
include/Editor/Core/: Editor.h
include/Editor/Misc/: UIWindows.h
include/Editor/Modules/: Inspector.h
include/Game/Component/: AAPP.h  Camera.h  Formas Primitivas.h  GameObject.h  MeshRenderer.h  Transform.h
include/Game/Core/: App.h  Game.h
include/Game/Importers/: MeshImporter.h
include/Game/Modules/: EntityManager.h  Input.h  MyWindow.h  ResourceManager.h
include/Game/Resources/: KMesh.h  Shader.h  Texture.h
include/Game/Structures/: Event.h  EventTypes.h
include/Game/Utilities/: FileUtils.h  Stencil.h  Time.h
include/Modules/: EntityManager.h  Input.h  Inspector.h  Module.h
include/Structures/: Event.h  FpMesh.h  KMeshBase.h  MeshRenderer.h  MyMesh.h  PpMesh.h  Shader.h  Texture.h  UIConsole.h  UIWindows.h
include/Utilities/: CustomAssimpUtils.h  Defs.h  Stencil.h  Time.h
include/glad/: glad.h
src/: MyWindow.cpp  glad.c
src/Common/Component/: AAPP.cpp  Camera.cpp  Component.cpp  GameObject.cpp  MeshRenderer.cpp  Transform.cpp
src/Common/Core/: App.cpp  main.cpp
src/Common/Importers/: MeshImporter.cpp
src/Common/Modules/: EntityManager.cpp  Input.cpp  MyWindow.cpp  ResourceManager.cpp
src/Common/Resources/: KMesh.cpp  Resource.cpp  Shader.cpp  Texture.cpp
src/Common/Utilities/: FileUtils.cpp  Log.cpp  Stencil.cpp  Time.cpp
src/Component/: AAPP.cpp  Camera.cpp  Component.cpp  GameObject.cpp  Transform.cpp
src/Core/: App.cpp  main.cpp
src/Editor/: Editor.cpp
src/Editor/Core/: Editor.cpp
src/Editor/Misc/: UIWindows.cpp
src/Game/: Game.cpp
src/Game/Core/: Game.cpp
src/Modules/: EntityManager.cpp  IgInterface.cpp  Input.cpp  Inspector.cpp  Time.h
src/Structures/: FpMesh.cpp  MeshRenderer.cpp  MyMesh.cpp  PpMesh.cpp  Shader.cpp  Texture.cpp  UIConsole.cpp  UIWindows.cpp
src/Utilities/: FileUtils.cpp  Log.cpp  Stencil.cpp  Time.cpp
(+1 files in other folders)
